	 compatability fixes.
20040814 generate.pl.in,libspectrum.h.in,make-perl.c: more Visual C++
	 compatability fixes.
20040905 libspectrum.h.in,rzx.c: support multiple input recording blocks
	 in an RZX file.
20040906 crypto.c,libspectrum.h.in,rzx.c: re-add support for creator and
	 signature blocks in RZX files.
20040909 rzx.c: fix RZX digital signatures.
20040909 libspectrum.h.in,rzx.c: update libspectrum_rzx_write API for
	 multiple IRB files.
20040910 libspectrum.h.in,rzx.c: implement RZX rollback.
20040918 libspectrum.h.in,rzx.c: allow RZX rollback to arbitrary points.
20041025 accessor.pl,internals.h,libspectrum.c,libspectrum.h.in,
         snap_accessors.txt,snapshot.c,szx.c,z80.c,doc/libspectrum.txt: Add
         support for connected joystick information in snapshots.
20041031 .cvsignore: ignore stamp-h1.
20041125 Makefile.am,libspectrum.h.in,microdrive.c: very simple .mdr
         handling.
20041221 rzx.c: fix compilation when gcrypt not present (thanks, Erik Kunze)
	 (closes bug #1053346).
20041230 libspectrum.c,libspectrum.h.in: add identification of .mdr files
	 (part of patch #1085429) (Gergely Szasz).
20050102 libspectrum.h.in,microdrive.c: variable length microdrive cartridge
	 handling (rest of patch #1085429) (Gergely Szasz).
20050102 libspectrum.{c,h.in},sna.c,szx.c,timings.c,z80.c: TS2068 support
	 (patch #1080531) (Fred).
20050108 libspectrum.c: Declare libspectrum_default_error_function before
         referring to it (Fred).
20050108 timings.c: fix Pentagon and Scorpion CPU speeds to give them 50Hz
	 frame rates (rest of patch #1080531) (Fred).
20050113 libspectrum.c: Set NTSC capability for the TS2068 (Fred).
20050115 szx.c,zxs.c: fix compilation when zlib not present (closes bug
	 #1098337).
20050125 libspectrum.h.in: Warn about use of deprecated interfaces with GCC
	 (Fred).
20050204 szx.c,rzx.c: More compilation fixes when zlib not present (Fred).
20050204 libspectrum.h.in: More Win32 compilation fixes (Fred).